--- a/androidjokeui/src/main/res/layout/content_joke.xml
+++ b/androidjokeui/src/main/res/layout/content_joke.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/textViewJoke"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
